# MoFox-Core

./: .gitignore  EULA.md  FIXES_SUMMARY.md  README.md  SMART_PROMPT_INTEGRATION.md  TODO.md  bot.py  docker-compose.yml  message_driven_loop_test.py  optimization_report.md  pyproject.toml  pyrightconfig.json  requirements.txt  test_fixes.py  ui_log_adapter.py
.github/: copilot-instructions.md
.github/prompts/: chat.prompt.md
.github/workflows/: docker-image.yml
MaiBot-Napcat-Adapter-dev/: .gitignore  Dockerfile  README.md  command_args.md  main.py  notify_args.md  pyproject.toml  requirements.txt
MaiBot-Napcat-Adapter-dev/.devcontainer/: devcontainer.json
MaiBot-Napcat-Adapter-dev/.github/workflows/: docker-image.yml
MaiBot-Napcat-Adapter-dev/src/: __init__.py  database.py  logger.py  mmc_com_layer.py  response_pool.py  send_handler.py  utils.py
MaiBot-Napcat-Adapter-dev/src/config/: __init__.py  config.py  official_configs.py
MaiBot-Napcat-Adapter-dev/src/recv_handler/: __init__.py  message_handler.py  message_sending.py  meta_event_handler.py  notice_handler.py  qq_emoji_list.py
MaiBot-Napcat-Adapter-dev/template/: template_config.toml
changelogs/: changelog.md  v0.13.0.md
docs/: OneKey-Plus.md  deployment_guide.md  message_runtime_architecture.md  model_configuration_guide.md  mofox_bus.md  three_tier_memory_completion_report.md  three_tier_memory_user_guide.md  unified_scheduler_guide.md  用户画像系统重构规划.md
docs/architecture/: PERMISSION_SYSTEM.md  memory_system_design_v3.md
docs/development/: CONTRIBUTE.md
docs/guides/: model_configuration_guide.md  vector_db_usage_guide.md
docs/memory_graph/: design_outline.md
docs/plugins/: dependency-management.md  manifest-guide.md  quick-start.md
examples/: mofox_bus_demo_adapter.py
plugins/bilibli/: bilibli_base.py  plugin.py
plugins/echo_example/: __init__.py
plugins/hello_world_plugin/: __init__.py  plugin.py
plugins/napcat_adapter_plugin/: event_handlers.py  event_types.py  plugin.py
plugins/napcat_adapter_plugin/src/: message_chunker.py
plugins/set_emoji_like/: plugin.py
plugins/tarots_plugin/: _manifest.json  plugin.py
plugins/tarots_plugin/tarot_jsons/: formation.json
scripts/: check_expression_database.py  check_style_field.py  clean_permission_nodes.py  convert_manifest.py  debug_style_learner.py  deduplicate_memories.py  generate_missing_embeddings.py  log_viewer.py  lpmm_learning_tool.py  memory_cleaner.py  migrate_database.py  rebuild_metadata_index.py  reset_pg_sequences.py  test_three_tier_memory.py  update_prompt_imports.py
src/: __init__.py  main.py
src/api/: __init__.py  memory_visualizer_router.py  message_router.py  statistic_router.py
src/api/templates/: visualizer.html
src/chat/: chatter_manager.py
src/chat/affinity_flow/: __init__.py  afc_manager.py  chatter.py  interest_scoring.py  relationship_integration.py  relationship_tracker.py
src/chat/antipromptinjector/: counter_attack.py  shield.py  流程图.md
src/chat/chat_loop/: cycle_processor.py  cycle_tracker.py  energy_manager.py  heartFC_chat.py  hfc_context.py  hfc_utils.py  response_handler.py  wakeup_manager.py
src/chat/emoji_system/: emoji_history.py  emoji_manager.py
src/chat/energy_system/: energy_manager.py
src/chat/express/: express_utils.py  expression_learner.py  expression_selector.py  situation_extractor.py  style_learner.py
src/chat/frequency_analyzer/: analyzer.py  tracker.py  trigger.py
src/chat/heart_flow/: heartflow_message_processor.py
src/chat/interest_system/: __init__.py  bot_interest_manager.py  interest_manager.py
src/chat/knowledge/: embedding_store.py  kg_manager.py  knowledge_lib.py  open_ie.py  qa_manager.py
src/chat/memory_system/: Hippocampus.py  __init__.py  action_diagnostics.py  async_instant_memory_wrapper.py  async_memory_optimizer.py  enhanced_memory_activator.py  enhanced_memory_core.py  hippocampus_sampler.py  hybrid_instant_memory.py  hybrid_memory_design.md  instant_memory.py  memory_activator_new.py  memory_builder.py  memory_chunk.py  memory_forgetting_engine.py  memory_formatter.py  memory_fusion.py  memory_manager.py  memory_metadata_index.py  memory_query_planner.py  memory_system.py  message_collection_processor.py  message_collection_storage.py  multi_stage_retrieval.py  unified_memory_storage.py  vector_instant_memory.py  vector_memory_storage_v2.py
src/chat/message_manager/: __init__.py  adaptive_stream_manager.py  batch_database_writer.py  context_manager.py  distribution_manager.py  global_notice_manager.py  message_manager.py  scheduler_dispatcher.py  stream_cache_manager.py
src/chat/message_receive/: bot.py  chat_stream.py  message.py  message_handler.py  message_processor.py  message_recv_backup.py  optimized_chat_stream.py  storage.py  uni_message_sender.py
src/chat/planner_actions/: action_manager.py  action_modifier.py  plan_executor.py  plan_filter.py  plan_generator.py  planner.py  planner_prompts.py
src/chat/replyer/: replyer_manager.py  (+1 more)
src/common/: cache_manager.py  cache_manager_backup.py  config_helpers.py  core_sink_manager.py  logger.py  mem_monitor.py  memory_utils.py  message_repository.py  remote.py  schedule_manager.py  security.py  server.py
src/config/: api_ada_configs.py  config.py  config_base.py  official_configs.py
src/individuality/: individuality.py
src/llm_models/: utils.py  utils_model.py
src/manager/: async_task_manager.py  local_store_manager.py  schedule_manager.py
src/memory_graph/: long_term_manager.py  manager.py  manager_singleton.py  models.py  perceptual_manager.py  short_term_manager.py  unified_manager.py
src/mood/: mood_manager.py
src/person_info/: person_info.py  relationship_builder.py  relationship_fetcher.py  relationship_manager.py
src/plugin_system/: __init__.py
src/schedule/: database.py  llm_generator.py  monthly_plan_manager.py  plan_manager.py  prompts.py  schedule_context.py  schedule_manager.py  schemas.py  unified_scheduler.py
src/utils/: json_parser.py  timing_utils.py
template/: bot_config_template.toml  model_config_template.toml
tests/: test_wakeup_system.py
(+365 files in other folders)
